Move tomcat configuration out of fcrepo role